<resources>
    <string name="app_name">ShuttleMobile</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm">Sign Up</string>
    <string name="login_register">Sign Up</string>
    <string name="driver_active">Active</string>
    <string name="driver_inactive">Inactive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleHome">Home</string>
    <string name="titleHistory">Ride History</string>
    <string name="titleInbox">Inbox</string>
    <string name="titleAccount">Account</string>
    <string name="rideBegin">Begin</string>
    <string name="rideEnd">End</string>
    <string name="rideDistance">Distance</string>
    <string name="ridePrice">Price</string>
    <string name="rideRating">Rating</string>
    <string name="rideComment">Comment</string>
    <string name="ridePassengers">Passengers</string>
    <string name="rideOpenChat">Open Chat</string>
    <string name="rideRoute">Route</string>
    <string name="login">Sign In</string>
    <string name="loginForgotPassword">Forgot Password?</string>
    <string name="contentDescPfp">Profile Picture</string>
    <string name="openReviews">Open Reviews</string>
    <string name="rideNoReviews">No Reviews</string>
    <string name="reviews">Reviews</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="confirmEmail">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="registerTitle">Make Account</string>


    <string name="driverNameData">Icarus</string>
    <string name="driverSurnameData">Doe</string>
    <string name="driverPhoneData">+381 60 123456</string>
    <string name="driverEmailData">driver@gmail.com</string>
    <string name="driverAddressData">212b Bakers Street</string>
    <string name="driverLicence">Driver Licence:</string>
    <string name="driverLicenceData">12345678</string>
    <string name="licencePlate">Licence plate:</string>
    <string name="licencePlateData">AA 111 BB</string>
    <string name="spots">Seats:</string>
    <string name="spotsData">4</string>
    <string name="model">Model:</string>
    <string name="modelData">Golf 7</string>
    <string name="baby">Babies:</string>
    <string name="babyData">no</string>
    <string name="driverAddress">Address:</string>
    <string name="driverEmail">Email:</string>
    <string name="driverPhone">Phone:</string>
    <string name="driverSurname">Surname:</string>
    <string name="driverName">Name:</string>

    <string name="messageInputHint">Message</string>
    <string name="driver_ride_history_item_end">12/12/2022 11:59</string>
    <string name="driver_ride_history_item_price">138,00 RSD</string>
    <string name="driver_ride_history_item_distance">1.2 km</string>
    <string name="driver_ride_history_item_open_ratings">Rating 4.5/5</string>

    <string name="selectStartTimeLabel">Select start time</string>
    <string name="etStartDate">Start date</string>
    <string name="etStartTime">Start time</string>
    <string name="selectEndTimeLabel">Select end time</string>
    <string name="etEndDate">End date</string>
    <string name="etEndTime">End time</string>
    <string name="btnPreviewPassengerPastRidesReport"> Show report</string>
    <string name="userNameLabel"> Name: </string>
    <string name="nameValue"> Name value</string>
    <string name="surnameLabel">  Surname:</string>
    <string name="surnameValue">  Surname value</string>
    <string name="phoneLabel"> Phone: </string>
    <string name="phoneValue">Phone value</string>
    <string name="emailLabel"> Email: </string>
    <string name="emailValue">Email value</string>
    <string name="addressLabel"> Address: </string>
    <string name="addressValue"> Address value</string>
    <string name="btnSavePassenger"> Save </string>
    <string name="favouriteRoutes"> Favourite routes </string>
    <string name="reports"> Reports </string>
    <string name="passengerProfilePicture"> Profile picture</string>

    <string name="pets"> Pets</string>
    <string name="splitFare"> Split fare</string>
    <string name="yes">Yes</string>


    <string-array name="usernames">
        <item>Support</item>
        <item>Yan</item>
        <item>Ghostblade</item>
        <item>Robute Guilliman</item>
        <item>Ulfric Stormclocak</item>
    </string-array>

    <string-array name="last_messages">
        <item>Issue resovled</item>
        <item>Ghostblade</item>
        <item>lone</item>
        <item>Ultramar</item>
        <item>Emperor</item>
    </string-array>

    <string-array name="messages">
        <item>1|Issue resovled</item>
        <item>0|Ghostblade</item>
        <item>1|lone</item>
        <item>0|Ultramar</item>
        <item>0|Emperorasojaushdddddddddd ddddddddddddddd dddddddddddd ddddd</item>
    </string-array>

</resources>