<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passenger.PassengerAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="0dp">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:background="#237FB5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/passengerProfilePicture"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/passengerProfilePicture"
            android:padding="7sp"
            android:src="@android:mipmap/sym_def_app_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@android:mipmap/sym_def_app_icon" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/passengerProfilePicture"
            tools:layout_editor_absoluteX="25dp">

            <TextView
                android:id="@+id/userNameLabel"
                style="@style/AccountInfoText"
                android:text="@string/userNameLabel" />

            <EditText
                android:id="@+id/nameValue"
                style="@style/AccountInfoText"
                android:hint="@string/nameValue"
                android:enabled="false"/>

            <ImageView
                android:id="@+id/nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="25dp">

            <TextView
                android:id="@+id/surnameLabel"
                style="@style/AccountInfoText"
                android:text="@string/surnameLabel" />

            <EditText
                android:id="@+id/surnameValue"
                style="@style/AccountInfoText"
                android:hint="@string/surnameValue"
                android:enabled="false"/>
            <ImageView
                android:id="@+id/surnameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pen" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:layout_editor_absoluteX="25dp">

            <TextView
                android:id="@+id/phoneLabel"
                style="@style/AccountInfoText"
                android:text="@string/phoneLabel" />

            <EditText
                android:id="@+id/phoneValue"
                style="@style/AccountInfoText"
                android:hint="@string/phoneValue"
                android:enabled="false"/>

            <ImageView
                android:id="@+id/phoneEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pen" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            tools:layout_editor_absoluteX="25dp">

            <TextView
                android:id="@+id/emailLabel"
                style="@style/AccountInfoText"
                android:text="@string/emailLabel" />

            <EditText
                android:id="@+id/emailValue"
                style="@style/AccountInfoText"
                android:hint="@string/emailValue"
                android:enabled="false"
                />

            <ImageView
                android:id="@+id/emailEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            tools:layout_editor_absoluteX="25dp">

            <TextView
                android:id="@+id/addressLabel"
                style="@style/AccountInfoText"
                android:text="@string/addressLabel" />

            <EditText
                android:id="@+id/addressValue"
                style="@style/AccountInfoText"
                android:enabled="false"
                android:hint="@string/addressValue" />

            <ImageView
                android:id="@+id/addressEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pen" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSavePassenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="#237FB5"
            android:textSize="18sp"
            android:text="@string/btnSavePassenger"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        <Button
            android:id="@+id/btnFavouriteRoutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#237FB5"
            android:text="Favourite routes"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSavePassenger" />
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btnSavePassenger"
            tools:layout_editor_absoluteX="25dp"
            android:weightSum="2"
            android:padding="5sp">

            <Button
                android:id="@+id/btnFavouriteRoutes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/favouriteRoutes"
                android:layout_gravity="center"
                android:layout_margin="5sp"/>
            <Button
                android:id="@+id/btnReports"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/reports"
                android:layout_gravity="center"
                android:layout_margin="5sp"/>


        <Button
            android:id="@+id/btnReports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#237FB5"
            android:text="Reports"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFavouriteRoutes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>